# trixify

./: .gitignore  README.md  pyproject.toml  trixify.toml.example
docker/: Dockerfile
trixify/: __init__.py  __main__.py  arguments.py  config.py  output.py
trixify/matrix/: __init__.py  keyverification.py
trixify/models/: userid.py
